--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,8 @@
         }
     },
     "rules": {
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
         "react/require-default-props": "off",
         "react/no-unused-prop-types": "warn",
         "react/no-unused-state": "warn",
